test/parser/exercise/struct_instantiation_in_condition_error.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main(): void {
  if Struct{ field: 0, field: 1 } {}
  // CHECK: [[# @LINE -1 ]]:19: error: expected ';' at the end of expression
  // CHECK: [[# @LINE -2 ]]:35: error: expected expression

  
  while Struct{} {}
  // CHECK: [[# @LINE -1 ]]:18: error: expected expression
}
